--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 	"homepage": "https://github.com/ghozlene/learning-nodeJS#readme",
 	"devDependencies": {
 		"nodemon": "^2.0.15"
+	},
+	"dependencies": {
+		"express": "^4.17.3"
 	}
 }
