--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.19.2",
-		"express": "^4.17.3"
+		"ejs": "^3.1.6",
+		"express": "^4.17.3",
+		"express-handlebars": "^6.0.3",
+		"pug": "^3.0.2"
 	}
 }
