--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"express": "^4.17.3",
 		"express-handlebars": "^6.0.3",
 		"mongodb": "^4.4.1",
+		"mongoose": "^6.2.9",
 		"pug": "^3.0.2"
 	}
 }
