--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
 		"express-handlebars": "^6.0.3",
+		"express-session": "^1.17.2",
 		"mongodb": "^4.4.1",
 		"mongoose": "^6.2.9",
 		"pug": "^3.0.2"
