--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.19.2",
+		"connect-mongodb-session": "^3.1.1",
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
 		"express-handlebars": "^6.0.3",
