--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"express-session": "^1.17.2",
 		"mongodb": "^4.4.1",
 		"mongoose": "^6.2.9",
+		"nodemailer": "^6.7.3",
+		"nodemailer-sendgrid-transport": "^0.2.0",
 		"pug": "^3.0.2"
 	}
 }
